🐛 Incorrect Filename Encoding for Spaces #358